objects/Student__c.object
<CustomObject>
    <label>Student</label>
    <nameField>
        <displayFormat>RollNo-{0000}</displayFormat>
        <label>Student No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Student_Email__c</fullName>
        <label>Student Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Student_Last_Name__c</fullName>
        <label>Student Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_First_Name__c</fullName>
        <label>Student First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>